--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,5 +57,5 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
-         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         docker build -t 791691623793.dkr.ecr.us-east-1.amazonaws.com/fast-food-ecr:$IMAGE_TAG .
+         docker push 791691623793.dkr.ecr.us-east-1.amazonaws.com/fast-food-ecr:$IMAGE_TAG
